# internal/app/api/types.go
@@ -28,4 +28,11 @@ type (
 		Customer CustomerItem `json:"customer"`
 		Orders   OrderList    `json:"orders"`
 	}
+
+	UserInfoItem struct {
+		ID        string `json:"id"`
+		FirstName string `json:"first_name"`
+		LastName  string `json:"last_name"`
+		Email     string `json:"email"`
+	}
 )
